# Competition-projects

./: README.md
SmartCar competition/Windows端源码/Windows端源码/Client/Client/: main.cpp  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp  res.qrc
SmartCar competition/Windows端源码/Windows端源码/video_process/video_process/: 2.cpp  3.cpp  4.cpp
latest/latest/空白工程/App/inc/: bsp_adc.h  bsp_control.h  bsp_delay.h  bsp_pwm.h  bsp_servo.h  bsp_track.h  bsp_usart.h  bsp_usart_blt.h  stm32f10x_it.h
latest/latest/空白工程/App/src/: bsp_adc.c  bsp_control.c  bsp_delay.c  bsp_pwm.c  bsp_servo.c  bsp_track.c  bsp_usart_blt.c  main.c  stm32f10x_it.c
latest/latest/空白工程/Project/: example.uvguix.60582  example.uvguix.Ma Mingze  example.uvguix.pc  example.uvoptx  example.uvprojx
latest/latest/空白工程/Project/Listings/: example.map  startup_stm32f10x_hd.lst
latest/latest/空白工程/Project/Objects/: bsp_adc.crf  bsp_adc.d  bsp_control.crf  bsp_control.d  bsp_delay.crf  bsp_delay.d  bsp_pwm.crf  bsp_pwm.d  bsp_servo.crf  bsp_servo.d  bsp_track.crf  bsp_track.d  bsp_usart.crf  bsp_usart.d  bsp_usart_blt.crf  bsp_usart_blt.d  example.axf  example.build_log.htm  example.hex  example.htm  example.lnp  example_Project.dep  main.crf  main.d  misc.crf  misc.d  stm32f10x_adc.crf  stm32f10x_adc.d  stm32f10x_bkp.crf  stm32f10x_bkp.d  stm32f10x_can.crf  stm32f10x_can.d  stm32f10x_cec.crf  stm32f10x_cec.d  stm32f10x_crc.crf  stm32f10x_crc.d  stm32f10x_dac.crf  stm32f10x_dac.d  stm32f10x_dbgmcu.crf  (+35 more)
哈工大威海-718航天队-国赛技术说明文档与源码/Windows端源码/Windows端源码/video_process/video_process/: 1.cpp  5.cpp  CMakeLists.txt
(+80 files in other folders)
